--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -1,12 +1,10 @@
-#################################
-#       Shadows       #
-#################################
-
+#░█▀▀░█░█░█▀█░█▀▄░█▀█░█░█░█▀▀
+#░▀▀█░█▀█░█▀█░█░█░█░█░█▄█░▀▀█
+#░▀▀▀░▀░▀░▀░▀░▀▀░░▀▀▀░▀░▀░▀▀▀
 
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
 # unless explicitly requested using the wintypes option.
-#
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
@@ -37,11 +35,9 @@ shadow-exclude = [
 # currently implemented using the X RandR extension.
 # crop-shadow-to-monitor = false
 
-
-#################################
-#       Fading        #
-#################################
-
+#░█▀▀░█▀█░█▀▄░▀█▀░█▀█░█▀▀
+#░█▀▀░█▀█░█░█░░█░░█░█░█░█
+#░▀░░░▀░▀░▀▀░░▀▀▀░▀░▀░▀▀▀
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
@@ -66,11 +62,9 @@ no-fading-openclose = true
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
 
-
-#################################
-#   Transparency / Opacity    #
-#################################
-
+#░█▀█░█▀█░█▀█░█▀▀░▀█▀░▀█▀░█░█
+#░█░█░█▀▀░█▀█░█░░░░█░░░█░░░█░
+#░▀▀▀░▀░░░▀░▀░▀▀▀░▀▀▀░░▀░░░▀░
 
 # Opacity of inactive windows. (.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
@@ -80,7 +74,6 @@ inactive-opacity = 1;
 frame-opacity = 1.0
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
-#inactive-opacity-override = true
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (.0 - 1.0, defaults to 1.0)
@@ -99,8 +92,6 @@ inactive-dim = 0;
 # like `50:name *= "Firefox"`. picom-trans is recommended over this.
 # Note we don't make any guarantee about possible conflicts with other
 # programs that set '_NET_WM_WINDOW_OPACITY' on frame or client windows.
-# example:
-#  opacity-rule = [ "80:class_g = 'URxvt'"];
 opacity-rule = [
   "100:fullscreen",
   "100:QTILE_INTERNAL = 1",
@@ -108,9 +99,9 @@ opacity-rule = [
   "90:class_g = 'Rofi'"
 ]
 
-#################################
-#       Corners       #
-#################################
+#░█▀▀░█▀█░█▀▄░█▀█░█▀▀░█▀▄░█▀▀
+#░█░░░█░█░█▀▄░█░█░█▀▀░█▀▄░▀▀█
+#░▀▀▀░▀▀▀░▀░▀░▀░▀░▀▀▀░▀░▀░▀▀▀
 
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
@@ -127,11 +118,9 @@ rounded-corners-exclude = [
   "window_type = 'desktop'",
 ];
 
-
-#################################
-#   Background-Blurring     #
-#################################
-
+#░█▀▄░█░░░█░█░█▀▄
+#░█▀▄░█░░░█░█░█▀▄
+#░▀▀░░▀▀▀░▀▀▀░▀░▀
 
 # Parameters for background blurring, see the *BLUR* section for more information.
 blur-method = "dual_kawase"
@@ -141,39 +130,29 @@ blur-strength = 4
 # Blur background of semi-transparent / ARGB windows.
 # Bad in performance, with driver-dependent behavior.
 # The name of the switch may change without prior notifications.
-#
 blur-background = true
 
 # Blur background of windows when the window frame is not opaque.
 # Implies:
 #  blur-background
 # Bad in performance, with driver-dependent behavior. The name may change.
-#
 blur-background-frame = false
-
 
 # Use fixed blur strength rather than adjusting according to window opacity.
 blur-background-fixed = false
 
-
-# Specify the blur convolution kernel, with the following format:
-# example:
-#   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
-#
-# blur-kern = ""
+# Specify the blur convolution kernel.
 blur-kern = "3x3box";
 
-
 # Exclude conditions for background blur.
-# blur-background-exclude = []
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
 ];
 
-#################################
-#     General Settings    #
-#################################
+#░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀▀░▀█▀░▀█▀░▀█▀░█▀█░█▀▀░█▀▀
+#░█░█░█▀▀░█░█░█▀▀░█▀▄░█▀█░█░░░░░▀▀█░█▀▀░░█░░░█░░░█░░█░█░█░█░▀▀█
+#░▀▀▀░▀▀▀░▀░▀░▀▀▀░▀░▀░▀░▀░▀▀▀░░░▀▀▀░▀▀▀░░▀░░░▀░░▀▀▀░▀░▀░▀▀▀░▀▀▀
 
 # Enable remote control via D-Bus. See the man page for more details.
 # dbus = true
@@ -183,9 +162,7 @@ daemon = false
 
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
-#
 backend = "glx"
-# backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
@@ -193,41 +170,31 @@ backend = "glx"
 dithered-present = false;
 
 # Enable/disable VSync.
-# vsync = false
 vsync = true;
 
 # Try to detect WM windows (a non-override-redirect window with no
 # child that has 'WM_STATE') and mark them as active.
-#
-# mark-wmwin-focused = false
 mark-wmwin-focused = false;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
 mark-ovredir-focused = false;
 
 # Try to detect windows with rounded corners and don't consider them
 # shaped windows. The accuracy is not very high, unfortunately.
-#
-# detect-rounded-corners = false
 detect-rounded-corners = true;
 
 # Detect '_NET_WM_WINDOW_OPACITY' on client windows, useful for window managers
 # not passing '_NET_WM_WINDOW_OPACITY' of client windows to frame windows.
-#
-# detect-client-opacity = false
 detect-client-opacity = true;
 
 # Use EWMH '_NET_ACTIVE_WINDOW' to determine currently focused window,
 # rather than listening to 'FocusIn'/'FocusOut' event. Might have more accuracy,
 # provided that the WM supports it.
-#
 use-ewmh-active-win = true
 
 # Unredirect all windows if a full-screen opaque window is detected,
 # to maximize performance for full-screen windows. Known to cause flickering
 # when redirecting/unredirecting windows.
-#
 # unredir-if-possible = false
 
 # Delay before unredirecting the window, in milliseconds. Defaults to .
@@ -238,15 +205,12 @@ use-ewmh-active-win = true
 
 # Use 'WM_TRANSIENT_FOR' to group windows, and consider windows
 # in the same group focused at the same time.
-#
-# detect-transient = false
 detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same
 # group focused at the same time. This usually means windows from the same application
 # will be considered focused or unfocused at the same time.
 # 'WM_TRANSIENT_FOR' has higher priority if detect-transient is enabled, too.
-#
 # detect-client-leader = false
 
 # Resize damaged region by a specific number of pixels.
@@ -259,80 +223,66 @@ detect-transient = true;
 # (e.g. with a 3x3 kernel, you should use `--resize-damage 1`,
 # with a 5x5 one you use `--resize-damage 2`, and so on).
 # May or may not work with *--glx-no-stencil*. Shrinking doesn't function correctly.
-#
 # resize-damage = 1
 
 # Specify a list of conditions of windows that should be painted with inverted color.
 # Resource-hogging, and is not well tested.
-#
 # invert-color-include = []
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer.
 # Might cause incorrect opacity when rendering transparent content (but never
 # practically happened) and may not work with blur-background.
 # My tests show a 15% performance boost. Recommended.
-#
 glx-no-stencil = true
 
 # GLX backend: Avoid rebinding pixmap on window damage.
 # Probably could improve performance on rapid window content changes,
 # but is known to break things on some drivers (LLVMpipe, xf86-video-intel, etc.).
 # Recommended if it works.
-#
 # glx-no-rebind-pixmap = false
 
 # Disable the use of damage information.
 # This cause the whole screen to be redrawn every time, instead of the part of the screen
 # has actually changed. Potentially degrades the performance, but might fix some artifacts.
 # The opposing option is use-damage
-#
-# no-use-damage = false
 use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw
 # calls are finished before picom starts drawing. Needed on nvidia-drivers
 # with GLX backend for some users.
-#
 # xrender-sync-fence = false
 
 # GLX backend: Use specified GLSL fragment shader for rendering window
 # contents. Read the man page for a detailed explanation of the interface.
-#
 # window-shader-fg = "default"
 
 # Use rules to set per-window shaders. Syntax is SHADER_PATH:PATTERN, similar
 # to opacity-rule. SHADER_PATH can be "default". This overrides window-shader-fg.
-#
 # window-shader-fg-rule = [
 #   "my_shader.frag:window_type != 'dock'"
 # ]
 
 # Force all windows to be painted with blending. Useful if you
 # have a glx-fshader-win that could turn opaque pixels transparent.
-#
 # force-win-blend = false
 
 # Do not use EWMH to detect fullscreen windows.
 # Reverts to checking if a window is fullscreen based only on its size and coordinates.
-#
 # no-ewmh-fullscreen = false
 
 # Dimming bright windows so their brightness doesn't exceed this set value.
 # Brightness of a window is estimated by averaging all pixels in the window,
 # so this could comes with a performance hit.
 # Setting this to 1.0 disables this behaviour. Requires --use-damage to be disabled. (default: 1.0)
-#
 # max-brightness = 1.0
 
 # Make transparent windows clip other windows like non-transparent windows do,
 # instead of blending on top of them.
-#
 # transparent-clipping = false
 
 # Specify a list of conditions of windows that should never have transparent
 # clipping applied. Useful for screenshot tools, where you need to be able to
 # see through transparent parts of the window.
-#
 # transparent-clipping-exclude = []
 
 # Set the log level. Possible values are:
@@ -340,8 +290,6 @@ use-damage = true;
 # in increasing level of importance. Case doesn't matter.
 # If using the "TRACE"log level, it's better to log into a file
 # using *--log-file*, since it can generate a huge stream of logs.
-#
-# log-level = "debug"
 log-level = "warn";
 
 # Set the log file.
@@ -349,7 +297,6 @@ log-level = "warn";
 # Otherwise, logs will to written to the given file, though some of the early
 # logs might still be written to the stderr.
 # When setting this option from the config file, it is recommended to use an absolute path.
-#
 # log-file = "/path/to/your/log/file"
 
 # Show all X errors (for debugging)
@@ -402,9 +349,9 @@ wintypes:
   menu = { blur-background = false; shadow = false }
 };
 
-#################################
-#     Animation Settings    #
-#################################
+#░█▀█░█▀█░▀█▀░█▄█░█▀█░▀█▀░▀█▀░█▀█░█▀█░█▀▀
+#░█▀█░█░█░░█░░█░█░█▀█░░█░░░█░░█░█░█░█░▀▀█
+#░▀░▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀
 
 animations = (
   {
@@ -417,19 +364,6 @@ animations = (
     };
     blur-opacity = "opacity";
     shadow-opacity = "opacity";
-    offset-x = 0;
-    offset-y = {
-      curve = "cubic-bezier(0,0,1,-0.28)";
-      duration = .2;
-      start = 0;
-      end = 64;
-    };
-    scale-x = 1;
-    scale-y = 1;
-    shadow-scale-x = "scale-x";
-    shadow-scale-y = "scale-y";
-    shadow-offset-x = "offset-x";
-    shadow-offset-y = "offset-y";
   },
   {
     triggers = ["open"];
@@ -441,19 +375,6 @@ animations = (
     }
     blur-opacity = "opacity";
     shadow-opacity = "opacity";
-    offset-x = 0;
-    offset-y = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = .2;
-      start = -64;
-      end = 0;
-    };
-    scale-x = 1;
-    scale-y = 1;
-    shadow-scale-x = "scale-x";
-    shadow-scale-y = "scale-y";
-    shadow-offset-x = "offset-x";
-    shadow-offset-y = "offset-y";
   },
   {
     triggers = ["geometry"]
@@ -481,7 +402,6 @@ animations = (
       start = "window-y-before - window-y";
       end = 0;
     }
-
     shadow-scale-x = "scale-x";
     shadow-scale-y = "scale-y";
     shadow-offset-x = "offset-x";
