--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -8,16 +8,16 @@
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
-shadow-radius = 10;
+shadow-radius = 8;
 
 # The opacity of shadows. (.0 - 1.0, defaults to .75)
-shadow-opacity = .6
+shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
-shadow-offset-x = -8;
+shadow-offset-x = -15;
 
 # The top offset for shadows, in pixels. (defaults to -15)
-shadow-offset-y = -8;
+shadow-offset-y = -15;
 
 # Hex string color value of shadow (#000000 - #FFFFFF, defaults to #000000). This option will override options set shadow-(red/green/blue)
 shadow-color = "#111111"
@@ -97,6 +97,7 @@ opacity-rule = [
   "100:QTILE_INTERNAL = 1",
   "100:name *= 'Dunst'",
   "90:class_g = 'Rofi'"
+  "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ]
 
 #░█▀▀░█▀█░█▀▄░█▀█░█▀▀░█▀▄░█▀▀
@@ -106,7 +107,7 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 8
+corner-radius = 0
 
 corner-radius-rules = [
   "0:QTILE_INTERNAL = 1"
