--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -96,7 +96,7 @@ opacity-rule = [
   "100:fullscreen",
   "100:QTILE_INTERNAL = 1",
   "100:name *= 'Dunst'",
-  "90:class_g = 'Rofi'"
+  "90:class_g = 'Rofi'",
   "0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ]
 
