--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -25,6 +25,7 @@ shadow-color = "#000000"
 # Specify a list of conditions of windows that should have no shadow.
 shadow-exclude = [
   "QTILE_INTERNAL = 1"
+  "class_g = 'slop'"
 ];
 
 # Specify a list of conditions of windows that should have no shadow painted over, such as a dock window.
@@ -148,6 +149,7 @@ blur-kern = "3x3box";
 blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'"
+  "class_g - 'slop'"
 ];
 
 #░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀▀░▀█▀░▀█▀░▀█▀░█▀█░█▀▀░█▀▀
