home/picom: fix typo (again...)

--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -24,7 +24,7 @@ shadow-color = "#000000"
 
 # Specify a list of conditions of windows that should have no shadow.
 shadow-exclude = [
-  "QTILE_INTERNAL = 1"
+  "QTILE_INTERNAL = 1",
   "class_g = 'slop'"
 ];
 
@@ -148,8 +148,8 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 blur-background-exclude = [
   "window_type = 'dock'",
-  "window_type = 'desktop'"
-  "class_g - 'slop'"
+  "window_type = 'desktop'",
+  "class_g = 'slop'"
 ];
 
 #░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀▀░▀█▀░▀█▀░▀█▀░█▀█░█▀▀░█▀▀
