home: exclude rofi from most picom fx

--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -26,6 +26,7 @@ shadow-color = "#000000"
 shadow-exclude = [
   "QTILE_INTERNAL = 1",
   "class_g = 'slop'",
+  "class_g = 'Rofi'", 
   "name = 'Dunst'"
 ];
 
@@ -55,7 +56,9 @@ fade-out-step = .02
 fade-delta = 4
 
 # Specify a list of conditions of windows that should not be faded.
-# fade-exclude = []
+fade-exclude = [
+  "class_g = 'Rofi'"
+];
 
 # Do not fade on window open/close.
 no-fading-openclose = true
@@ -358,51 +361,51 @@ wintypes:
 #░▀░▀░▀░▀░▀▀▀░▀░▀░▀░▀░░▀░░▀▀▀░▀▀▀░▀░▀░▀▀▀
 
 animations = (
-  {
-    triggers = ["close"];
-    opacity = {
-      curve = "cubic-bezier(0,0,1,-0.28)";
-      duration = .2; 
-      start = "window-raw-opacity-before";
-      end = 0;
-    };
-    blur-opacity = "opacity";
-    shadow-opacity = "opacity";
-  },
-  {
-    triggers = ["open"];
-    opacity = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = .2;
-      start = 0;
-      end = "window-raw-opacity";
-    }
-    blur-opacity = "opacity";
-    shadow-opacity = "opacity";
-  },
+  # {
+  #   triggers = ["close"];
+  #   opacity = {
+  #     curve = "cubic-bezier(0,0,1,-0.28)";
+  #     duration = .1; 
+  #     start = "window-raw-opacity-before";
+  #     end = 0;
+  #   };
+  #   blur-opacity = "opacity";
+  #   shadow-opacity = "opacity";
+  # },
+  # {
+  #   triggers = ["open"];
+  #   opacity = {
+  #     curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
+  #     duration = .1;
+  #     start = 0;
+  #     end = "window-raw-opacity";
+  #   }
+  #   blur-opacity = "opacity";
+  #   shadow-opacity = "opacity";
+  # },
   {
     triggers = ["geometry"]
     scale-x = {
       curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.2;
+      duration = 0.1;
       start = "window-width-before / window-width";
       end = 1;
     }
     scale-y = {
       curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.2;
+      duration = 0.1;
       start = "window-height-before / window-height";
       end = 1;
     }
     offset-x = {
       curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.2;
+      duration = 0.1;
       start = "window-x-before - window-x";
       end = 0;
     }
     offset-y = {
       curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.2;
+      duration = 0.1;
       start = "window-y-before - window-y";
       end = 0;
     }
