home: disable rofi animations + exclude firefox utilities from blur/shadows

--- a/modules/home/window-manager/extras/picom.conf
+++ b/modules/home/window-manager/extras/picom.conf
@@ -26,7 +26,8 @@ shadow-color = "#000000"
 shadow-exclude = [
   "QTILE_INTERNAL = 1",
   "class_g = 'slop'",
-  "class_g = 'Rofi'", 
+  "class_g = 'Rofi'", 		
+  "(class_g = 'firefox') && (window_type = 'utility' || window_type = 'popup_menu')",
   "name = 'Dunst'"
 ];
 
@@ -154,7 +155,8 @@ blur-background-exclude = [
   "window_type = 'dock'",
   "window_type = 'desktop'",
   "class_g = 'slop'",
-  "name *= 'Dunst'"
+  "name *= 'Dunst'",
+  "(class_g = 'firefox') && (window_type = 'utility' || window_type = 'popup_menu')"
 ];
 
 #░█▀▀░█▀▀░█▀█░█▀▀░█▀▄░█▀█░█░░░░░█▀▀░█▀▀░▀█▀░▀█▀░▀█▀░█▀█░█▀▀░█▀▀
@@ -383,35 +385,35 @@ animations = (
   #   blur-opacity = "opacity";
   #   shadow-opacity = "opacity";
   # },
-  {
-    triggers = ["geometry"]
-    scale-x = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.1;
-      start = "window-width-before / window-width";
-      end = 1;
-    }
-    scale-y = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.1;
-      start = "window-height-before / window-height";
-      end = 1;
-    }
-    offset-x = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.1;
-      start = "window-x-before - window-x";
-      end = 0;
-    }
-    offset-y = {
-      curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
-      duration = 0.1;
-      start = "window-y-before - window-y";
-      end = 0;
-    }
-    shadow-scale-x = "scale-x";
-    shadow-scale-y = "scale-y";
-    shadow-offset-x = "offset-x";
-    shadow-offset-y = "offset-y";
-  }
+  # {
+  #   triggers = ["geometry"]
+  #   scale-x = {
+  #     curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
+  #     duration = 0.1;
+  #     start = "window-width-before / window-width";
+  #     end = 1;
+  #   }
+  #   scale-y = {
+  #     curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
+  #     duration = 0.1;
+  #     start = "window-height-before / window-height";
+  #     end = 1;
+  #   }
+  #   offset-x = {
+  #     curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
+  #     duration = 0.1;
+  #     start = "window-x-before - window-x";
+  #     end = 0;
+  #   }
+  #   offset-y = {
+  #     curve = "cubic-bezier(0.25,0.46,0.45,0.94)";
+  #     duration = 0.1;
+  #     start = "window-y-before - window-y";
+  #     end = 0;
+  #   }
+  #   shadow-scale-x = "scale-x";
+  #   shadow-scale-y = "scale-y";
+  #   shadow-offset-x = "offset-x";
+  #   shadow-offset-y = "offset-y";
+  # }
 )
